--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CyclingDirections</string>
     <string name="insert_code_field_hint">Insert Code</string>
     <string name="six_digit_code_warning">Codes should be 6 digit!</string>
+    <string name="settings_generic_message_1"><b><u>When receiving a new message from the room,</u></b></string>
 </resources>
