--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">CyclingDirections</string>
+    <string name="google_maps_api_key">AIzaSyAJNhltcYZeExe6ZHpn3_T6upNQ9fAQ5-0</string>
     <string name="insert_code_field_hint">Insert Code</string>
     <string name="six_digit_code_warning">Codes should be 6 digit!</string>
     <string name="settings_generic_message_1"><b><u>When receiving a new message from the room,</u></b></string>
